# Progetto_Sapore

./: PickPouringLeft.yaml  README.md  frames_2025-10-21_22.27.06.gv  test
build_scene_package/: CMakeLists.txt
build_scene_package/obstacle_descritpion/: environment.yaml
build_scene_package/src/: build_scene_simple.cpp
iiwa_config_moveit_config/: CMakeLists.txt
iiwa_config_moveit_config/config/urdf/: dual_iiwa_robot.urdf.xacro
iiwa_config_moveit_config/launch/: demo.launch.py
iiwa_description/: CMakeLists.txt
iiwa_description/launch/: dual_iiwa_no_rviz.launch.py
iiwa_description/meshes/: schunk.stl
iiwa_description/meshes/obstacles/: Pavimento1.stl
iiwa_description/urdf/: dual_iiwa_robot.urdf.xacro  iiwa_arm_tcp.urdf.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/build_scene_package/lib/build_scene_package/: build_scene  build_scene_mesh  build_scene_simple  visual_mesh_publisher
install/build_scene_package/share/build_scene_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/build_scene_package/share/build_scene_package/cmake/: build_scene_packageConfig-version.cmake  build_scene_packageConfig.cmake
install/build_scene_package/share/build_scene_package/environment/: ament_prefix_path.dsv  path.dsv
install/build_scene_package/share/build_scene_package/meshes/: Bilancia.stl  CellaSapore.stl  CellaSapore2.stl  Congelatore.stl  Contenitori.stl  Deimpilatore_piatti.stl  Frigorifero.stl  Lavabo.stl  Monitor.stl  PC Gestionale.stl  Pavimento1.stl  Piatto.stl  QE.stl  Rastrelliera.stl  Roboqbo.stl  Roboqbo_semplificato.stl  Tavolo_inox.stl  Tavolo_inox2.stl  Trasportatore1.stl  iiwa 14 R820 - MF Inside elektrisch.stl  piatto_noCoperchio.stl
install/iiwa_config/share/iiwa_config/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/iiwa_config_moveit_config/share/iiwa_config_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/iiwa_description/share/iiwa_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interfaces/share/interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/nodes/lib/nodes/: Raggiungibilita  Reach  check_collision  dynamic_analyzer_node  test_Reach  test_reach
install/nodes/share/nodes/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/reachability_package/lib/reachability_package/: Reach  interactive_reach
install/reachability_package/share/reachability_package/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_skill/share/robot_skill/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_skills/share/robot_skills/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/validate_trajectory/lib/validate_trajectory/: execute_yaml_trajectories_node  validate_trajectory_node
install/validate_trajectory/share/validate_trajectory/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
interfaces/: CMakeLists.txt
log/: latest_build
nodes/launch/: launch.py
nodes/src/: JtrajLeft.cpp  JtrajRight.cpp
src/build_scene_package/: CMakeLists.txt  Readme.md
src/build_scene_package/meshes/: CellaSapore.stl  CellaSapore2.stl  QE.stl  Tavolo_inox2.stl
src/build_scene_package/obstacle_description_total/: environment.yaml
src/build_scene_package/obstacle_descritpion/: environment.yaml
src/build_scene_package/src/: build_scene.cpp  build_scene_mesh.cpp  build_scene_simple.cpp
src/iiwa_config/: CMakeLists.txt  package.xml
src/iiwa_config/config/: ompl_planning.yaml
src/iiwa_config/config/urdf/: dual_iiwa_robot.urdf.xacro
src/iiwa_config/launch/: dual_iiwa_control.launch.py
src/iiwa_config_moveit_config/: package.xml
src/iiwa_config_moveit_config/config/: dual_iiwa_robot.srdf  gripper_moveit_controllers.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  trac_ik_kinematics.yaml
src/iiwa_config_moveit_config/config/urdf/: dual_iiwa_robot.ros2_control.xacro  dual_iiwa_robot.urdf.xacro  dual_iiwa_robot_hand.ros2_control.xacro
src/iiwa_config_moveit_config/launch/: config_interactive_marker.rviz  demo.launch.py  demo_interactive_marker.launch.py  moveit.rviz  rsp.launch.py  static_virtual_joint_tfs.launch.py
src/iiwa_description/launch/: dual_iiwa.launch.py  view_iiwa.launch.py
src/iiwa_description/meshes/: CellaSapore2.stl  bounding_primitive_hand.stl  finger_right.stl
src/iiwa_description/meshes/bounding_obstacle/: bounding_primitive_Rastrelliera.stl  bounding_primitive_roboqbo.stl  male.stl
src/iiwa_description/meshes/obstacles/: Congelatore.stl  Contenitori.stl  (+6 more)
src/iiwa_description/urdf/: dual_iiwa_left.ros2_control.xacro  dual_iiwa_robot.urdf  iiwa_arm_tcp.urdf.xacro  scene_environment.urdf.xacro  scene_obstacles.urdf.xacro
src/interfaces/: package.xml
src/nodes/: CMakeLists.txt
src/nodes/launch/: grid_points_second.launch.py  launch.py
src/nodes/src/: Jtraj.cpp  Reach.cpp  Reachability_interactive.cpp  interactive_marker.cpp  task.cpp  test_Reachability.cpp  test_reach.cpp
src/reachability_package/: CMakeLists.txt  Readme.md
src/reachability_package/launch/: grid_points.launch.py
src/reachability_package/src/: Reachability_interactive.cpp  test_reach.cpp
src/robot_skills/: CMakeLists.txt  README.md
src/robot_skills/include/: MoveitHelper.hpp  SaveYaml.hpp
src/robot_skills/src/: MoveitHelper.cpp  SaveYaml.cpp  pick_place_server.cpp
src/validate_trajectory/: CMakeLists.txt  README.md  package.xml
src/validate_trajectory/src/: ExecuteYamlTrajectoriesNode.cpp  Valid_trajectory_click.cpp
(+182 files in other folders)
